--- a/config/scaffolding/Mcp_ganeshProject.yml
+++ b/config/scaffolding/Mcp_ganeshProject.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/Ganesh-Jathar-Git
   gitUsername: Ganesh-Jathar-Git
   gitBranch: main
+- name: WxMCPServer
+  gitServerName: mcp_ganesh
+  gitUrl: https://github.com/ibm
+  gitUsername: Ganesh-Jathar-Git
+  gitBranch: main
